--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
+    font-family: "Inter", sans-serif;
 }
 
 .navigation {
@@ -9,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 23px;
+    padding: 10px 23px;
 }
 
 .navigation__pages {
@@ -17,4 +20,41 @@
     align-items: center;
     justify-content: space-between;
     gap: 30px;
+    font-size: 1rem;
+}
+
+.navigation__logo {
+    cursor: pointer;
+}
+
+.navigation__element:hover {
+    color: gray;
+    cursor: pointer;
+}
+
+.navigation__search {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search__bar {
+    text-decoration: none;
+    height: 38px;
+    padding-left: 5px;
+    outline: none;
+    margin-right: 1rem;
+}
+
+.search__button {
+    background-color: transparent;
+    color: white;
+    height: 38px;
+    border: 1px solid white;
+    padding: 0 8px;
+}
+
+.search__button:hover {
+    background-color: white;
+    color: black;
 }
