--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,3 +58,16 @@
     background-color: white;
     color: black;
 }
+
+@media (max-width: 880px) {
+    .navigation__pages {
+        gap: 15px;
+        font-size: 0.6rem;
+    }
+
+    .search__button {}
+
+    .search__bar {}
+}
+
+@media (max-width: 375px) {}
